--- a/src/TRAVEL-ART-FORUM/components/ResultsByCity/ResultsByCity.css
+++ b/src/TRAVEL-ART-FORUM/components/ResultsByCity/ResultsByCity.css
@@ -9,15 +9,16 @@
 }
 
 .website-link, .google-maps-link{
-  border: 2px solid white;
+  border: 2px solid rgb(16, 110, 192);
+  border-radius: 5px;
   display: inline-block;
   margin-bottom: 10px;
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .signle-result-place {
   display: inline-block;
-  margin-left: 20px;
+  margin-right: 20px;
 }
 
 /* .all-results {
