Home page design

--- a/src/comp/screen/globeview/index.css
+++ b/src/comp/screen/globeview/index.css
@@ -13,7 +13,7 @@
 	/* position: absolute; */
 	/* width: 1400px; */
 	height: 500px;
-	background-color: aquamarine;
+	background-color: transparent;
 }
 
 .operation {
