--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,34 @@
 body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-		"Helvetica Neue", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 html,
 body {
-	min-height: 100vh;
-	display: flex;
-	flex: 1;
-	margin: 0;
-	padding: 0;
-	background-color: #000;
+  min-height: 100vh;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  background-color: #000;
+  width: 100%;
 }
 
 #root {
-	display: flex;
-	flex: 1;
-	margin: 0;
-	padding: 0;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
-.test {
+/* .test {
 	margin-top: 380px;
 	margin-left: 350px;
-}
+	width: 100%;
+} */
