--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 .App {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   align-items: center;
   text-align: center;
   width: 100%;
   height: 100%;
-  background: url('https://img.freepik.com/free-photo/beautiful-shot-starry-night-sky_181624-11744.jpg?w=1380&t=st=1708369235~exp=1708369835~hmac=d6f9d20826985258d2442cb157ecf66599dee7566345c85bfafe442275d442a7') !important;
+  background: url('../images/Background-Final.jpg') !important;
+}
+
+h1 {
+  font-size: 35px !important;
 }
