Home page Globe result Buttons Design

--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,8 @@ body {
   width: 100%;
 }
 
-/* .test {
-	margin-top: 380px;
-	margin-left: 350px;
+.test {
+
+	margin-left: 150px;
 	width: 100%;
-} */
+}
