--- a/src/TRAVEL-ART-FORUM/pages/Home/Home.css
+++ b/src/TRAVEL-ART-FORUM/pages/Home/Home.css
@@ -1,4 +1,29 @@
 .most-commented-posts {
-    /* display: inline-block !important; */
     float: left !important;
+}
+
+.recently-created-posts {
+    float: left !important;
+}
+
+.general-info {
+    display: inline-block !important;
+}
+
+.globe-results {
+    padding-left: 30px;
+display: flex;
+justify-content: center;
+flex-direction: column;
+font-size: 25px;
+margin-left: 20px;
+}
+
+.globe-results > a {
+    display: inline-block;
+    border: 2px solid gray;
+    border-radius: 15px;
+    margin-bottom: 10px;
+ width: fit-content;
+ padding: 15px;
 }
