Home page design

--- a/src/TRAVEL-ART-FORUM/components/NavBar/NavBar.css
+++ b/src/TRAVEL-ART-FORUM/components/NavBar/NavBar.css
@@ -4,7 +4,7 @@
 .navbar {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     /* gap: 150px; */
     text-align: center;
 }
