--- a/src/TRAVEL-ART-FORUM/views/MostCommented/MostCommented.css
+++ b/src/TRAVEL-ART-FORUM/views/MostCommented/MostCommented.css
@@ -1,16 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap');
-
-
-.most-commented-title {
-    /* border: 2px solid gray;
-    margin-left: 30px; */
-    color: #199419;
-    font-weight: bold;
-    font-family: "Aguafina Script", cursive;
-}
+@import url("https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap");
 
 .most-commented-box {
-    border: 2px solid gray;
-    border-radius: 25px;
-    margin-left: 30px;
+  float: left !important;
+  border: 2px solid gray;
+  border-radius: 25px;
+  margin-left: 30px;
+}
+
+.most-commented-box > h1 {
+  color: #199419;
+  font-weight: bold;
+  font-family: "Aguafina Script", cursive;
 }
