--- a/src/TRAVEL-ART-FORUM/views/RecentlyCreated/RecentlyCreated.css
+++ b/src/TRAVEL-ART-FORUM/views/RecentlyCreated/RecentlyCreated.css
@@ -1,15 +1,12 @@
-
-
-.recently-created-title {
-    /* border: 2px solid gray;
-    margin-left: 30px; */
-    color: #199419;
-    font-weight: bold;
-    font-family: "Aguafina Script", cursive;
+.recently-created-posts > h1 {
+  color: #199419;
+  font-weight: bold;
+  font-family: "Aguafina Script", cursive;
 }
 
-.recently-created-box {
-    border: 2px solid gray;
-    border-radius: 25px;
-    margin-left: 30px;
+.recently-created-posts {
+  float: left !important;
+  border: 2px solid gray;
+  border-radius: 25px;
+  margin-left: 30px;
 }
