--- a/src/TRAVEL-ART-FORUM/components/AllPosts/AllPosts.css
+++ b/src/TRAVEL-ART-FORUM/components/AllPosts/AllPosts.css
@@ -1,15 +1,17 @@
 .post-box {
-border: 3px solid blue;
-height: 150px;
-position: relative;
-div {
-display: flex;
-justify-content: space-between;
-margin-top: 40px;
-position: absolute;
-bottom: 0;
+    border: 3px solid blue;
+    height: 150px;
+    position: relative;
+
+    div {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 40px;
+        position: absolute;
+        bottom: 0;
+    }
 }
-}
+
 #post-author {
     position: absolute;
     left: 0;
@@ -25,13 +27,48 @@ bottom: 0;
     color: bisque;
     font-size: 22px;
 }
+
 #likes-number {
-    margin-left: 10px;   
+    margin-left: 10px;
 }
 
-.search-posts-box {
-text-align: left;
-margin-left: 50px;
+#search-bar{
+    float:left;
+    margin-left: 50px;
+    font-size: 35px;
+    width: 100%;
+    text-align: left;
+    margin-bottom: 10px;
+}
+#search {
+    border-radius: 15px;
+    width: 450px;
+    height: 55px;
+    font-size: 42px;
+    padding: 0 20px;
+    background-color: rgb(36, 34, 34);
+    border-left: 2px solid rgba(255, 255, 255, 0.3);
+    border-top: 2px solid rgba(255, 255, 255, 0.3);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
+}
+.sort-posts-box {
+    width: 800px;
+    margin-left: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: left;
+    margin-left: 50px;
+    font-size: 25px;
+}
+.sort-posts-box  input {
+margin-left: 10px;
+width: 10px;
+height: 10px;
+transform: scale(2);
+
 }
 
 .all-posts-box {
@@ -39,11 +76,10 @@ margin-left: 50px;
     float: left;
     width: 800px;
     margin-left: 50px;
+
     h2 {
-        font-size: 30px; 
+        font-size: 30px;
         display: inline;
         text-align: left;
     }
 }
-
-
