--- a/src/TRAVEL-ART-FORUM/components/NavBar/NavBar.css
+++ b/src/TRAVEL-ART-FORUM/components/NavBar/NavBar.css
@@ -12,7 +12,7 @@
 .navbar > .home-page-logo {
     font-size: 4.3rem;
     padding: 0;
-    color: rgb(193, 211, 223);
+    color: bisque;
     font-family: "Aguafina Script", cursive;
     font-weight: 400;
     font-style: normal;
