--- a/src/TRAVEL-ART-FORUM/components/SinglePost/SinglePost.css
+++ b/src/TRAVEL-ART-FORUM/components/SinglePost/SinglePost.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Aladin&family=Dancing+Script&family=Oswald:wght@200..700&family=Protest+Revolution&display=swap');
+
+
+
 .comments {
   list-style: none;
   padding: 0;
@@ -31,4 +35,117 @@
 
 .comment-info {
   border: 2px solid blue;
+}
+
+.post-info {
+  border-left: 2px solid rgba(255, 255, 255, 0.3);
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  position: relative;
+  margin-bottom: 25px;
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+#creted-on {
+  font-size: 22px;
+  color: white;
+}
+
+#post-author {
+  font-size: 35px;
+}
+
+
+.post-info h1 {
+  display: inline-block;
+  text-align: center;
+  font-size: 40px !important;
+}
+.delete-post-button {
+  font-size: 24px;
+  font-weight: bold;
+  float: right;
+  margin-top: 20px;
+  margin-right: 20px;
+ color: rgb(150, 28, 28);
+   font-family: "Oswald", sans-serif;
+   border: 1px solid rgb(150, 28, 28);
+   padding: 2px;
+   border-radius: 5px;
+   padding-left: 10px;
+   padding-right: 10px; 
+   width: 160px; 
+   height: 55px;
+}
+
+.delete-post-button:active {
+opacity: 0.5;
+}
+
+#post-content {
+  font-size: 23px;
+  /* border: 2px solid red; */
+  height: 200px;
+  width: 90%;
+  margin-left: 90px;
+  overflow: auto;
+  text-align: left;
+  padding: 15px;
+  margin-top: 20px;
+}
+
+.likes-info {
+  /* display: inline-block; */
+  float: right;
+  margin-bottom: 0;
+}
+
+
+
+.input-wrapper {
+  position: relative;
+}
+
+#edit-post {
+  font-size: 23px;
+  border-left: 2px solid rgba(255, 255, 255, 0.3);
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  width: 90%;
+  margin-left: 20px;
+  overflow: auto !important;
+  text-align: left;
+  padding: 15px;
+  margin-top: 20px;
+  background-color: transparent;
+
+}
+.cancel-edit-button, .save-edit-button, .edit-button {
+  border: 1px solid bisque;
+  padding: 2px;
+  border-radius: 5px;
+  padding-left: 23px;
+  padding-right: 23px; 
+  font-size: 30px;
+margin-top: 15px;
+}
+.cancel-edit-button {
+  margin-left: 70px;
+}
+
+.cancel-edit-button:hover, .save-edit-button:hover, .edit-button:hover{
+opacity: 0.5;
+}
+
+.single-tag-span {
+  margin-left: 7px;
+  font-size: 20px;
+  color: bisque;
 }
