--- a/src/TRAVEL-ART-FORUM/components/PostTags/PostTags.css
+++ b/src/TRAVEL-ART-FORUM/components/PostTags/PostTags.css
@@ -3,29 +3,31 @@
 .tags-menu {
   text-align: center;
   margin-top: 10px;
-  width: 450px;
-  padding: 5px;
+  width: 200px;
   color: black;
   background-color: transparent;
-  border-radius: 20px;
+  border-radius: 7px;
   border-left: 1px solid rgba(255, 255, 255, 0.3);
   border-top: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
   box-shadow: 20px 20px 40px -6px rgba(255, 255, 255, 0.2);
 }
 
 .select-kit-header-wrapper {
   border-radius: 10px;
+  height: 90%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  padding: 10px;
   font-size: 25px;
 }
 
 .formatted-selection {
+  font-size: 17px;
+  border-radius: 10px;
+  padding-top: 4px;
+  padding-left: 5px;
+  text-align: center;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -42,12 +44,13 @@
 .drop-down-menu > input {
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
+  height: 40px;
 
   width: 90%;
   padding: 5px 10px;
   margin: 5px 0;
   color: bisque;
-  font-size: 23px;
+  font-size: 17px;
 
   background-color: transparent;
   border-radius: 5px;
