--- a/src/TRAVEL-ART-FORUM/pages/SignIn/SignIn.css
+++ b/src/TRAVEL-ART-FORUM/pages/SignIn/SignIn.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+
 .container {
   position: absolute;
   top: 50%;
@@ -22,6 +24,10 @@
 }
 
 .form > h2 {
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-size: 25px;
   color: #fff;
   opacity: 0.7;
   margin: 0 0 60px 0;
@@ -29,9 +35,12 @@
 }
 
 .form > a {
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-size: 17px;
   text-decoration: none;
   color: #ddd;
-  font-size: 12px;
 }
 .form > a:hover {
   text-shadow: 2px 2px 6px #00000040;
