--- a/src/TRAVEL-ART-FORUM/components/SinglePost/SinglePost.css
+++ b/src/TRAVEL-ART-FORUM/components/SinglePost/SinglePost.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Aladin&family=Dancing+Script&family=Oswald:wght@200..700&family=Protest+Revolution&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Protest+Revolution&display=swap');
 
 
 .comments {
@@ -65,27 +66,30 @@
   text-align: center;
   font-size: 40px !important;
 }
+
 .delete-post-button {
   font-size: 24px;
   font-weight: bold;
   float: right;
   margin-top: 20px;
   margin-right: 20px;
- color: rgb(150, 28, 28);
-   font-family: "Oswald", sans-serif;
-   border: 1px solid rgb(150, 28, 28);
-   padding: 2px;
-   border-radius: 5px;
-   padding-left: 10px;
-   padding-right: 10px; 
-   width: 160px; 
-   height: 55px;
+  color: rgb(150, 28, 28);
+  font-family: "Oswald", sans-serif;
+  border: 1px solid rgb(150, 28, 28);
+  padding: 2px;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 160px;
+  height: 55px;
 }
 
 .delete-post-button:active {
-opacity: 0.5;
+  opacity: 0.5;
 }
-
+#single-post-title {
+  font-family: "Oswald", sans-serif;
+}
 #post-content {
   font-size: 23px;
   /* border: 2px solid red; */
@@ -96,14 +100,60 @@ opacity: 0.5;
   text-align: left;
   padding: 15px;
   margin-top: 20px;
+  font-family: "Oswald", sans-serif;
 }
 
 .likes-info {
-  /* display: inline-block; */
-  float: right;
-  margin-bottom: 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  font-family: "Oswald", sans-serif;
+  font-size: 23px;
+}
+.likes-info button {
+  font-size: 30px;
+  margin-right: 40px;
+  margin-bottom: 25px;
 }
 
+.like-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.like-button:hover {
+  background-color: #0056b3; /* Darker shade of blue on hover */
+}
+
+.like-button span {
+  margin-left: 5px; /* Adjust the margin as needed */
+}
+
+#liked-by {
+
+  font-size: 24px;
+  width: 480px; /* Set your desired width */
+  display: inline-block; /* Ensures that the span respects the width */
+  overflow: hidden; /* Hides any overflowing text */
+  white-space: nowrap; 
+  text-overflow: ellipsis;
+  margin-left: 25px;
+}
+
+#liked-by span {
+  font-family: "Oswald", sans-serif;
+}
+
+#creted-on span {
+  font-family: "Oswald", sans-serif;
+}
 
 
 .input-wrapper {
@@ -127,21 +177,38 @@ opacity: 0.5;
   background-color: transparent;
 
 }
-.cancel-edit-button, .save-edit-button, .edit-button {
+
+.cancel-edit-button,
+.save-edit-button,
+.edit-button {
   border: 1px solid bisque;
   padding: 2px;
   border-radius: 5px;
   padding-left: 23px;
-  padding-right: 23px; 
+  padding-right: 23px;
   font-size: 30px;
-margin-top: 15px;
-}
-.cancel-edit-button {
-  margin-left: 70px;
+  margin-top: 15px;
 }
 
-.cancel-edit-button:hover, .save-edit-button:hover, .edit-button:hover{
-opacity: 0.5;
+.edit-button, .cancel-edit-button{
+float: right;
+margin-top: 20px;
+margin-right: 30px;
+}
+
+.save-edit-button  {
+  float: right;
+  margin-top: 20px;
+margin-right: 50px;
+}
+.cancel-edit-button {
+  margin-right: 40px;
+}
+
+.cancel-edit-button:hover,
+.save-edit-button:hover,
+.edit-button:hover {
+  opacity: 0.5;
 }
 
 .single-tag-span {
@@ -152,8 +219,87 @@ opacity: 0.5;
 
 
 .edit-tags-menu {
+  margin: auto;
   width: fit-content;
-  button {
-    margin-left: 10px;
-  }
+}
+
+#save-tags-button,
+#close-tags-button {
+  margin-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 10px;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  border: 1px solid bisque;
+  border-radius: 5px;
+}
+
+.add-comment-button {
+  border: 1px solid bisque;
+  padding: 3px;
+  border-radius: 5px;
+  padding-left: 23px;
+  padding-right: 23px;
+  font-size: 40px;
+  font-family: "Oswald", sans-serif;
+  color:  bisque;
+  margin-left: 27px;
+}
+.add-comment-button:hover {
+  opacity: 0.7;
+}
+.comment-input {
+  font-size: 25px !important;
+  font-family: "Oswald", sans-serif;
+}
+.comment-input::placeholder {
+  color: #999;
+  font-size: 25px;
+  font-family: "Dancing Script", cursive;
+  font-weight: bold
+}
+
+.ban-message {
+  color: rgb(150, 28, 28);
+  font-size: 40px;
+  font-family: "Oswald", sans-serif;
+  margin-bottom: 15px;
+}
+
+#search-comments-input {
+  float: left;
+text-align: left !important;
+  font-size: 25px;
+}
+.search-comments {
+  font-size: 25px;
+}
+.sort-comments {
+  float: left;
+  font-size: 20px;
+}
+.sort-comments-checkbox {
+  float: left;
+  margin-left: 10px;
+  width: 23px;
+  height: 23px;
+}
+.search-comments-input-box {
+  border-radius: 10px;
+  background-color: transparent;
+  border-left: 2px solid rgba(255, 255, 255, 0.3);
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
+  font-family: "Oswald", sans-serif;
+
+}
+.search-comments-div {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  font-size: 17px;
+  margin-top: 35px;
 }
