Comments Likes Fixed + SinglePost - seach and Add Comment - CSS added

--- a/src/TRAVEL-ART-FORUM/components/SearchMenu/SearchMenu.css
+++ b/src/TRAVEL-ART-FORUM/components/SearchMenu/SearchMenu.css
@@ -9,7 +9,10 @@ margin-left: 50px;
   margin: 0.3rem 0;
   padding: 0.3rem 0.5rem;
   border-radius: 5px;
-  background-color: rgba(212, 204, 124, 0.329);
+  background-color: transparent;
+  border-left: 2px solid rgba(255, 255, 255, 0.3);
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
   color: #fff;
   font-weight: 600;
   cursor: pointer;
@@ -28,7 +31,10 @@ margin-left: 50px;
   padding: 0.3rem 0.5rem;
   border-radius: 5px;
   cursor: pointer;
-  background-color: rgba(212, 204, 124, 0.329);
+  background-color: transparent;
+  border-left: 2px solid rgba(255, 255, 255, 0.3);
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
   color: #fff;
   font-size: 0.9rem;
   margin-right: 0.5rem;
