--- a/src/TRAVEL-ART-FORUM/components/AllPosts/AllPosts.css
+++ b/src/TRAVEL-ART-FORUM/components/AllPosts/AllPosts.css
@@ -57,11 +57,9 @@
     height: 55px;
     font-size: 42px;
     padding: 0 20px;
-    background-color: rgb(36, 34, 34);
+    background-color:transparent;
     border-left: 2px solid rgba(255, 255, 255, 0.3);
     border-top: 2px solid rgba(255, 255, 255, 0.3);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
     box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
 }
 .sort-posts-box {
