--- a/src/TRAVEL-ART-FORUM/components/CreatePost/CreatePost.css
+++ b/src/TRAVEL-ART-FORUM/components/CreatePost/CreatePost.css
@@ -28,8 +28,7 @@
     background-color: rgb(36, 34, 34);
     border-left: 2px solid rgba(255, 255, 255, 0.3);
     border-top: 2px solid rgba(255, 255, 255, 0.3);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
+background-color: transparent;
     box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
 }
 
@@ -39,8 +38,7 @@
     background-color: rgb(36, 34, 34);
     border-left: 2px solid rgba(255, 255, 255, 0.3);
     border-top: 2px solid rgba(255, 255, 255, 0.3);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
+    background-color: transparent;
     box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
     font-size: 28px;
     padding: 0 20px;
