--- a/src/TRAVEL-ART-FORUM/components/ResultsByCity/ResultsByCity.css
+++ b/src/TRAVEL-ART-FORUM/components/ResultsByCity/ResultsByCity.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+
 .image-by-result {
   width: 400px;
-  height:300px;
+  height: 300px;
   border-radius: 7px;
 }
 
@@ -8,19 +10,45 @@
   display: inline-block;
 }
 
-.website-link, .google-maps-link{
-  border: 2px solid rgb(16, 110, 192);
+.website-link,
+.google-maps-link {
   border-radius: 5px;
   display: inline-block;
   margin-bottom: 10px;
+  margin-top: 20px;
   margin-right: 10px;
+  padding: 10px;
+  font-family: "Oswald", sans-serif;
+  font-size: 20px;
+  border-left: 2px solid rgba(255, 255, 255, 0.3);
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 4px 4px 60px rgba(255, 255, 255, 0.3);
+}
+
+.website-link:hover,
+.google-maps-link:hover {
+  opacity: 0.7;
 }
 
 .signle-result-place {
   display: inline-block;
   margin-right: 20px;
+  margin-bottom: 40px;
 }
 
-/* .all-results {
+.all-results {
   display: grid;
-} */
+  grid-template-columns: auto auto auto;
+}
+
+#place-name-div {
+  width: 400px;
+  height: 100px !important;
+  text-align: center;
+}
+
+#title {
+  text-align: center;
+  font-size: 36px;
+  font-family: "Oswald", sans-serif;
+}
