--- a/src/TRAVEL-ART-FORUM/components/NavBar/NavBar.css
+++ b/src/TRAVEL-ART-FORUM/components/NavBar/NavBar.css
@@ -24,6 +24,8 @@
 }
 
 .navbar a {
+    font-family: "Aguafina Script", cursive;
+    font-weight: 400;
     text-decoration: none;
     color: #fff;
     font-size: 1.5rem;
