--- a/src/TRAVEL-ART-FORUM/views/AboutView/AboutView.css
+++ b/src/TRAVEL-ART-FORUM/views/AboutView/AboutView.css
@@ -38,7 +38,10 @@
 }
 
 .content-about {
-  font-size: 50px;
+  font-size: 26px;
+  text-align: left;
+  margin-left: 40px;
+  margin-bottom: 25px;
 }
 
 .our-team {
