--- a/src/TRAVEL-ART-FORUM/components/AllPosts/AllPosts.css
+++ b/src/TRAVEL-ART-FORUM/components/AllPosts/AllPosts.css
@@ -47,6 +47,7 @@
   font-family: "Protest Revolution", sans-serif;
   font-weight: 400;
   font-style: normal;
+  cursor: pointer;
 }
 
 #comments-and-likes {
