--- a/src/TRAVEL-ART-FORUM/components/NavBar/NavBar.css
+++ b/src/TRAVEL-ART-FORUM/components/NavBar/NavBar.css
@@ -10,13 +10,22 @@
 }
 
 .navbar > .home-page-logo {
-    font-size: 4.3rem;
+    font-size: 4.7rem;
     padding: 0;
     color: bisque;
     font-family: "Aguafina Script", cursive;
     font-weight: 400;
     font-style: normal;
     text-decoration: none;
+    margin-left: 430px !important;
+}
+#forum-button {
+margin-left: 67px;
+font-size: 50px !important;
+}
+#our-community {
+margin-left: 250px;
+font-size: 40px !important;
 }
 
 .navbar > .home-page-logo:hover {
@@ -33,7 +42,9 @@
     padding-top: 1rem;
     transition: 0.5s;
 }
-
+.nav-buttons {
+   
+}
 .navbar > .home-page-logo > span {
     margin-left: 40px;
 }
